--- a/hw1/resume.html
+++ b/hw1/resume.html
@@ -1,8 +1,28 @@
+<!-- Outside sources: 
+  1. Using auto with margins to center content: https://www.w3.org/Style/Examples/007/center.en.html
+  2. Fonts for entire body: https://www.w3schools.com/cssref/css_websafe_fonts.asp
+-->
 <html>
   <head>
     <title>My Resume</title>
     <style>
+      html, body {
+        font-family: Arial, Helvetica, sans-serif;
+        width: 960px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 20px;
+        margin-bottom: 20px;
+      }
 
+      h2 {
+        border-bottom: solid 3px gray;
+      }
+
+      img {
+        width: 200px;
+        float: right;
+      }
     </style>
   </head>
 
