--- a/hw1/rps.html
+++ b/hw1/rps.html
@@ -1,41 +1,74 @@
-Play Rock
-Play Paper
-Play Scissors
 
-Welcome to Rock-Paper-Scissors!
+<!-- Outside sources: 
+		1. Table attributes: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/table
+		2. Separate lines with <br/>:  http://www.tizag.com/htmlT/htmlbr.php
+-->
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Rock, Paper, Scissors</title>
+	</head>
+	
+	<body>
+		<a href="https://www.wikihow.com/Play-Rock,-Paper,-Scissors">Play Rock</a><br/>
+		<a href="https://www.wikihow.com/Play-Rock,-Paper,-Scissors">Play Paper</a><br/>
+		<a href="https://www.wikihow.com/Play-Rock,-Paper,-Scissors">Play Scissors</a><br/>
 
-From Wikipedia:
+		<h1>Welcome to Rock-Paper-Scissors!</h1>
 
-Rock-paper-scissors (also known as paper, scissors, stone or other variants) is a hand game usually played between two people, in which each player simultaneously forms one of three shapes with an outstretched hand.
+		<p>From <a href="https://en.wikipedia.org/wiki/Rock_paper_scissors">Wikipedia:</a></p>
 
-These shapes are:
+		<p>Rock-paper-scissors (also known as paper, scissors, stone or other variants) is a hand game usually played between two people, in which each player simultaneously forms one of three shapes with an outstretched hand.</p>
 
-- "rock" (a closed fist)
-- "paper" (a flat hand)
-- "scissors" (a fist with the index and middle fingers extended, forming a V)
+		<p>These shapes are:</p>
+		<ul>
+			<li>"rock" (a closed fist)</li>
+			<li>"paper" (a flat hand)</li>
+			<li>"scissors" (a fist with the index and middle fingers extended, forming a V)</li>
+		</ul>
 
-A player who decides to play rock will beat another player who has chosen scissors ("rock crushes scissors" or sometimes "blunts scissors"), but will lose to one who has played paper ("paper covers rock"); a play of paper will lose to a play of scissors ("scissors cut[s] paper"). If both players choose the same shape, the game is tied and is usually immediately replayed to break the tie.
+		<p>A player who decides to play rock will beat another player who has chosen scissors ("rock crushes scissors" or sometimes "blunts scissors"), but will lose to one who has played paper ("paper covers rock"); a play of paper will lose to a play of scissors ("scissors cut[s] paper"). If both players choose the same shape, the game is tied and is usually immediately replayed to break the tie.</p>
 
-                     _and they play..._
-                   Rock	      Paper	     Scissors
-_If we play..._
-Rock	             We tie	    We lose	   We win
-Paper	             We win	    We tie	   We lose
-Scissors	         We lose	  We win	   We tie
+	    <table border=2>
+	  		<tr>
+	  			<td colspan=2 rowspan=2></td>
+	  			<td colspan=3>and they play...</td>	
+	  		</tr>
+	  		<tr>
+	  			<td>Rock</td>
+	  			<td>Paper</td>
+	  			<td>Scissors</td>
+	  		</tr>
+	  		<tr>
+	  			<td rowspan=3>If we play...</td>
+	  			<td>Rock</td>
+	  			<td>We tie</td>
+	  			<td>We lose</td>
+	  			<td>We win</td>
+	  		</tr>
+	  		<tr>
+	  			<td>Paper</td>
+	  			<td>We win</td>
+	  			<td>We tie</td>
+	  			<td>We lose</td>
+	  		</tr>
+	  		<tr>
+	  			<td>Scissors</td>
+	  			<td>We lose</td>
+	  			<td>We win</td>
+	  			<td>We tie</td>
+	  		</tr>
+	    </table>
 
-Originating from China and Japan, other names for the game in the English-speaking world include roshambo and other orderings of the three items, with "rock" sometimes being called "stone".
+		<p>Originating from China and Japan, other names for the game in the English-speaking world include roshambo and other orderings of the three items, with "rock" sometimes being called "stone".</p>
 
+		<img src="rps-chart.png">
+		<p>A chart showing how the three game elements interact</p>
 
-A chart showing how the three game elements interact:
+		<img src="rps-figure-1.jpg">
+		<p>Kitsune-ken was a popular Japanese rock–paper–scissors variant. From left to right: The hunter (ryōshi), village head (shōya) and fox (kitsune)</p>
 
-[display chart.png here]
-
-
-Kitsune-ken was a popular Japanese rock–paper–scissors variant. From left to right: The hunter (ryōshi), village head (shōya) and fox (kitsune):
-
-[display figure-1.jpg here]
-
-
-Mushi-ken, the earliest Japanese sansukumi-ken game (1809). From left to right: slug (namekuji), frog (kawazu) and snake (hebi).
-
-[display figure-2.jpg here]
+		<img src="rps-figure-2.jpg">
+		<p>Mushi-ken, the earliest Japanese sansukumi-ken game (1809). From left to right: slug (namekuji), frog (kawazu) and snake (hebi).</p>
+	</body>
+</html>
