--- a/hw1/rps.html
+++ b/hw1/rps.html
@@ -2,6 +2,7 @@
 <!-- Outside sources: 
 		1. Table attributes: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/table
 		2. Separate lines with <br/>:  http://www.tizag.com/htmlT/htmlbr.php
+		3. Checked with Beth Pater
 -->
 <!DOCTYPE html>
 <html>
@@ -10,6 +11,7 @@
 	</head>
 	
 	<body>
+		<!-- Sent these links somewhere random because Jeff C. said it didn't matter -->
 		<a href="https://www.wikihow.com/Play-Rock,-Paper,-Scissors">Play Rock</a><br/>
 		<a href="https://www.wikihow.com/Play-Rock,-Paper,-Scissors">Play Paper</a><br/>
 		<a href="https://www.wikihow.com/Play-Rock,-Paper,-Scissors">Play Scissors</a><br/>
@@ -29,7 +31,7 @@
 
 		<p>A player who decides to play rock will beat another player who has chosen scissors ("rock crushes scissors" or sometimes "blunts scissors"), but will lose to one who has played paper ("paper covers rock"); a play of paper will lose to a play of scissors ("scissors cut[s] paper"). If both players choose the same shape, the game is tied and is usually immediately replayed to break the tie.</p>
 
-	    <table border=2>
+	    <table border=1>
 	  		<tr>
 	  			<td colspan=2 rowspan=2></td>
 	  			<td colspan=3>and they play...</td>	
@@ -66,7 +68,7 @@
 		<p>A chart showing how the three game elements interact</p>
 
 		<img src="rps-figure-1.jpg">
-		<p>Kitsune-ken was a popular Japanese rock–paper–scissors variant. From left to right: The hunter (ryōshi), village head (shōya) and fox (kitsune)</p>
+		<p>Kitsune-ken was a popular Japanese rock–paper–scissors variant. From left to right: The hunter (ryōshi), village head (shōya) and fox (kitsune).</p>
 
 		<img src="rps-figure-2.jpg">
 		<p>Mushi-ken, the earliest Japanese sansukumi-ken game (1809). From left to right: slug (namekuji), frog (kawazu) and snake (hebi).</p>
