--- a/hw2/etsy.html
+++ b/hw2/etsy.html
@@ -11,13 +11,12 @@ https://www.w3schools.com/howto/howto_css_searchbar.asp
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-
+  	<div class="container">
   	<header>
   		<h1>Etsy</h1>
   		<form>
   			<input type="text" placeholder="Search for items or shops"><button type="submit"><i class="fa fa-search" style="font-size:24px; font-weight: 3;"></i></button>
   		</form>
-
   		<a id="sign-in" href="#">Sign in</a>
   		<a id="cart" href="#"><i class="fa fa-shopping-cart" style="font-size:24px"></i></a>
   	</header>
@@ -63,6 +62,7 @@ https://www.w3schools.com/howto/howto_css_searchbar.asp
     		<p>We use best-in-class technology to protect your transactions.</p>
     	</article>
   	</div>
+  </div>
 
   </body>
 </html>
