--- a/hw2/etsy.html
+++ b/hw2/etsy.html
@@ -50,15 +50,17 @@ https://www.w3schools.com/howto/howto_css_searchbar.asp
 
   	<div id="checks">
   		<article>
-  			<span><i class="fa fa-check" aria-hidden="true" style="font-size: 25px; color: rgb(229, 84, 0); font-weight: 10;"></i><h4>Unique everything</h4></span>
+			<span class="check-symbol" data-content-toggle-icon=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M9.057,20.471L2.293,13.707a1,1,0,0,1,1.414-1.414l5.236,5.236,11.3-13.18a1,1,0,1,1,1.518,1.3Z"></path></svg></span>
+			<h4>Unique everything</h4>
   			<p>We have millions of one-of-a-kind items, so you can find whatever you need (or really, really want).</p>
   		</article>
   		<article>
-  			<span><i class="fa fa-check" aria-hidden="true" style="font-size: 25px; color: rgb(229, 84, 0); font-weight: 10;"></i><h4>Independent sellers</h4></span>
+  			<span class="check-symbol" data-content-toggle-icon=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M9.057,20.471L2.293,13.707a1,1,0,0,1,1.414-1.414l5.236,5.236,11.3-13.18a1,1,0,1,1,1.518,1.3Z"></path></svg></span><h4>Independent sellers</h4>
   			<p>Buy directly from someone who put their heart and soul into making something special.</p>
   		</article>
   		<article>
-    		<span><i class="fa fa-check" aria-hidden="true" style="font-size: 25px; color: rgb(229, 84, 0); font-weight: 10;"></i><h4>Secure shopping</h4></span>
+ 			<span class="check-symbol" data-content-toggle-icon=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M9.057,20.471L2.293,13.707a1,1,0,0,1,1.414-1.414l5.236,5.236,11.3-13.18a1,1,0,1,1,1.518,1.3Z"></path></svg></span>
+			<h4>Secure shopping</h4></span>
     		<p>We use best-in-class technology to protect your transactions.</p>
     	</article>
   	</div>
