--- a/hw2/etsy.html
+++ b/hw2/etsy.html
@@ -7,6 +7,7 @@ https://www.w3schools.com/howto/howto_css_searchbar.asp
   <head>
     <meta charset="utf-8">
     <title>Etsy - Shop for handmade, vintage, custom, and unique gifts for everyone</title>
+    <link rel="icon" href="favicon.png" type="image/icon type">
     <link rel="stylesheet" href="etsy.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
