--- a/hw2/etsy.html
+++ b/hw2/etsy.html
@@ -1,6 +1,7 @@
 <!-- Sources:
     1. Examined the CSS on Etsy.com to get the cart, arrow, magnifying glass, and mobile nav lines icons. Did this by taking their <svg> tags and pasting it in to a base64 program to get image. See, https://css-tricks.com/probably-dont-base64-svg/. 
-    2. Worked with Beth Pater and Paul Zimnoch.
+    2. favicon: https://stackoverflow.com/questions/9943771/adding-a-favicon-to-a-static-html-page
+    3. Worked with Beth Pater and Paul Zimnoch.
 -->
 
 <!DOCTYPE html>
