--- a/hw3/bikes.html
+++ b/hw3/bikes.html
@@ -29,7 +29,10 @@
 
           <p>Area:
             <select>
-
+              <option value="all">All</option>
+              <option value="uchicago">University of Chicago</option>
+              <option value="loop">Loop</option>
+              <option value="north">North Side</option>
             </select>
           </p>
 
@@ -71,6 +74,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+
+    <script src="bikes.js"></script>
 
   </body>
 </html>
