FP Initial Submission

--- a/fp/fp.html
+++ b/fp/fp.html
@@ -9,32 +9,30 @@
     <title>Final Project: Stock Portfolio Management</title>
   </head>
 
-  <body>
-    <div class="container m-3">
-      <h1 class="text-center mb-5">Welcome Back to Your Stock Portfolio!</h1>
+  <body class="text-center">
+    <div class="container">
+      <h1 class="mb-5">Welcome Back to Your Stock Portfolio!</h1>
       <h3>Buy Stock</h3>
-      <form>
+      <form id="purchase-stock">
         <div class="form-group row">
           <div class="col-3">
-            <label for="symbol">Stock Symbol</label>
-            <select class="form-control">
-              <option>Choose a Stock</option>
-            </select>
+            <label for="symbol">Symbol</label>
+            <input type="text" class="form-control" id="symbol" name="sym" placeholder="e.g., IBM, MSFT, AMZN" required>
           </div>
           <div class="col-3">
-            <label for="pps">Price per Share</label>
+            <label for="pps">Price per Share ($)</label>
             <input type="number" class="form-control" id="pps" name="price" readonly>
           </div>
           <div class="col-3">
             <label for="shares">Shares</label>
-            <input type="number" class="form-control" id="shares" name="units" placeholder="No. of Shares" min=1>
+            <input type="number" class="form-control" id="shares" name="units" placeholder="No. of Shares" min=1 required>
           </div>
           <div class="col-3">
-            <label for="pps">Total</label>
+            <label for="pps">Total Cost($)</label>
             <input type="number" class="form-control" id="total" name="tot" readonly>
           </div>
         </div>
-        <button type="submit" id="buy" class="btn btn-primary">Purchase Shares</button>
+        <button type="submit" class="btn btn-primary">Purchase Shares</button>
       </form>
 
       <div class="row mt-5">
@@ -45,9 +43,10 @@
               <tr>
                 <th>Symbol</th> 
                 <th>No. of Shares</th>
-                <th>Current Price per Share</th> 
-                <th>Total Value</th> 
-                <th>Initial Value</th>
+                <th>Current Price per Share ($)</th> 
+                <th>Total Value ($)</th> 
+                <th>Initial Value ($)</th>
+                <th>Profit/Loss ($)</th>
                 <th>Sell</th>
               </tr>
             </thead>
@@ -57,7 +56,7 @@
         </div>
       </div>
     </div>
-
+    <a href="https://iexcloud.io">Data provided by IEX Cloud</a>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
