--- a/fp/fp.html
+++ b/fp/fp.html
@@ -15,69 +15,78 @@
   		<div class="ml-3">
 	  		<h1 class="pt-5">The Bull and Bear</h1>
 	  		<p class="ml-1">Trading Made Simple.</p>
-	  		<a href="#buy" id="test" class="btn btn-primary mt-5" role="button">Purchase Shares</a>
-	  		<a href="#portfolio" class="btn btn-primary mt-5 ml-3" role="button">Review Portfolio and Sell</a>
+	  		<a href="#buy" id="test" class="btn btn-primary mt-3" role="button">Purchase Shares</a>
+	  		<a href="#portfolio" class="btn btn-primary mt-3 ml-3" role="button">Review Portfolio and Sell</a>
 	  	</div>
-	</div>
-	<hr>
-
-	<div class="container text-center mt-3" id="buy">
-	    <form id="purchase-stock">
-	        <div class="form-group row">
-	          <div class="col-3">
-	            <label for="symbol">Symbol</label>
-	            <input type="text" class="form-control" id="symbol" name="sym" placeholder="e.g., IBM, MSFT, AMZN" onfocus="this.value=''" required>
-	          </div>
-	          <div class="col-3">
-	            <label for="pps">Price per Share ($)</label>
-	            <input type="number" class="form-control" id="pps" name="price" readonly>
-	          </div>
-	          <div class="col-3">
-	            <label for="shares">Shares</label>
-	            <input type="number" class="form-control" id="shares" name="units" placeholder="No. of Shares" min=1 onfocus="this.value=''" required>
-	          </div>
-	          <div class="col-3">
-	            <label for="pps">Total Cost($)</label>
-	            <input type="number" class="form-control" id="total" name="tot" readonly>
-	          </div>
-	        </div>
-	        <button type="submit" class="btn btn-primary mt-3 mb-3">Purchase Shares</button>
-	        <p class="text-danger">Warning: The price per share shown is the price at the moment you enter the stock symbol. The price will update automatically and charge the price per share at the time you press "Purchase Shares." This should not be more than a few cents differential between what is shown and what you pay (if anything at all). This prevents users from waiting until the price is much higher and then the site charging what is shown in the price per share input box. That would be arbitrage and is illegal.</p>
-	    </form>
 	</div>
 	<hr>
 
 	<div class="container text-center mt-2" id="portfolio">
 		<div class="row mt-3">
 		    <div class="col">
-		      <div class="card">
-  				<div class="card-header bg-success">
+		      <div class="card table-responsive-sm fixed-table-body">
+  				<div class="card-header bg-success text-light">
   					<h4>Portfolio Overview</h4>
   				</div>
  				<div class="card-body">
 			    	<h5 class="card-title">Your current portfolio value is: $<span id="portfolio-value"></span></h5>
 			    	<h5 class="card-title">Your current portfolio net profit is: <span id="net-profit"></span></h5>
-			    	<h5 class="card-title">Your sold-shares net profit is: <span id="net-profit"></span></h5>
-			    	<p class="card-text">Current portfolio net profit is the profit from your shares currently in your portfolio but not yet sold. Sold-shares profit are profits from shares you have sold. These are "realized" profits in that these profits have been deposited in to your bank account.</p> 
   				</div>
+  				<table id="stocks" class="table table-striped table-bordered table-sm m-0">
+			        <thead class="bg-dark text-light">
+			          <tr>
+			            <th>Symbol</th> 
+			            <th>No. of Shares</th>
+			            <th>Current Price per Share ($)</th> 
+			            <th>Total Value ($)</th> 
+			            <th>Initial Value ($)</th>
+			            <th>Profit/Loss ($)</th>
+			            <th>Sell</th>
+			          </tr>
+			        </thead>
+			        <tbody>
+			        </tbody>
+			    </table>
 			  </div>
-		      <table id="stocks" class="table table-bordered mt-3">
-		        <thead class="bg-light">
-		          <tr>
-		            <th>Symbol</th> 
-		            <th>No. of Shares</th>
-		            <th>Current Price per Share ($)</th> 
-		            <th>Total Value ($)</th> 
-		            <th>Initial Value ($)</th>
-		            <th>Profit/Loss ($)</th>
-		            <th>Sell</th>
-		          </tr>
-		        </thead>
-		        <tbody>
-		        </tbody>
-		      </table>
 		    </div>
 		</div>
+	</div>
+	<hr>
+
+	<div class="container text-center mt-3" id="buy">
+		<div class="card">
+			<div class="card-header bg-primary text-light">
+				<h4>Buy Stocks</h4>
+			</div>
+			<div class="card-body">
+			    <form id="purchase-stock" class="mt-3">
+			        <div class="form-group row">
+			          <div class="col-3">
+			            <label for="symbol">Symbol</label>
+			            <input type="text" class="form-control" id="symbol" name="sym" placeholder="e.g., IBM, MSFT, AMZN" onfocus="this.value=''" required>
+			          </div>
+			          <div class="col-3">
+			            <label for="pps">Price per Share ($)</label>
+			            <input type="number" class="form-control" id="pps" name="price" readonly>
+			          </div>
+			          <div class="col-3">
+			            <label for="shares">Shares</label>
+			            <input type="number" class="form-control" id="shares" name="units" placeholder="No. of Shares" min=1 onfocus="this.value=''" required>
+			          </div>
+			          <div class="col-3">
+			            <label for="pps">Total Cost ($)</label>
+			            <input type="number" class="form-control" id="total" name="tot" readonly>
+			          </div>
+			        </div>
+			        <button type="submit" class="btn btn-outline-primary mt-3 mb-3">Purchase Shares</button>
+			    </form>
+			</div>
+		</div>
+	</div>
+	<hr>
+
+	<div class="container">
+		<p class="text-muted">Disclaimer: The current price per share shown is the price at the moment you load the webpage. Please refresh before you sell to get the most updated price. When buying shares, the price per share shown is the price at the moment you enter the stock symbol. The price will update automatically and charge the price per share at the time you press "Purchase Shares." This should not be more than a few cents differential between what is shown and what you pay (if anything at all).</p>
 		<a class="pt-5" href="https://iexcloud.io">Data provided by IEX Cloud</a>
 	</div>
 
