--- a/fp/fp.html
+++ b/fp/fp.html
@@ -25,7 +25,7 @@
 		<div class="row mt-3">
 		    <div class="col">
 		      <div class="card table-responsive-sm fixed-table-body">
-  				<div class="card-header bg-success text-light">
+  				<div class="card-header bg-dark text-light">
   					<h4>Portfolio Overview</h4>
   				</div>
  				<div class="card-body">
@@ -55,7 +55,7 @@
 
 	<div class="container text-center mt-3" id="buy">
 		<div class="card">
-			<div class="card-header bg-primary text-light">
+			<div class="card-header bg-dark text-light">
 				<h4>Buy Stocks</h4>
 			</div>
 			<div class="card-body">
