--- a/fp/fp.html
+++ b/fp/fp.html
@@ -35,12 +35,12 @@
   				<table id="stocks" class="table table-striped table-bordered table-sm m-0">
 			        <thead class="bg-dark text-light">
 			          <tr>
-			            <th>Symbol</th> 
-			            <th>No. of Shares</th>
-			            <th>Current Price per Share ($)</th> 
-			            <th>Total Value ($)</th> 
-			            <th>Initial Value ($)</th>
-			            <th>Profit/Loss ($)</th>
+			            <th>Symbol  &#9652;&#9662;</th> 
+			            <th>No. of Shares  &#9652;&#9662;</th>
+			            <th>Current Price per Share ($)  &#9652;&#9662;</th> 
+			            <th>Total Value ($)  &#9652;&#9662;</th> 
+			            <th>Initial Value ($)  &#9652;&#9662;</th>
+			            <th>Profit/Loss ($) &#9652;&#9662;</th>
 			            <th>Sell</th>
 			          </tr>
 			        </thead>
