--- a/hw4/index.html
+++ b/hw4/index.html
@@ -1,1 +1,32 @@
-<!-- Your code goes here -->
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+  	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
+    <title>Asteroids Near Earth</title>
+  </head>
+
+  <body class="bg">
+
+  	<div class="text-center">
+  		<div class="mb-5">
+	  		<h1 class="pt-5">Giant Asteroid for President 2020</h1>
+	  		<h2>Let's Just End It All</h2>
+	  		<h3>See below for a list of asteroids passing by Earth in the next seven days. On a given day, asteroids are sorted by the ones that NASA deem to be the most dangerous and then by those passing closest to the Earth. Note, also, the size of the asteroid, as those over 0.2 miles could cause severe damage if their path was diverted closer to Earth. These ones are highlighted, even if they are not passing close to the Earth.</h3>
+	  	</div>
+	</div>
+	<div id="asteroids">
+	</div>
+
+	<!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <script src="index.js"></script>
+
+  </body>
+</html>
