--- a/fp/fp.html
+++ b/fp/fp.html
@@ -35,12 +35,12 @@
   				<table id="stocks" class="table table-striped table-bordered table-sm m-0">
 			        <thead class="bg-dark text-light">
 			          <tr>
-			            <th>Symbol  &#9652;&#9662;</th> 
-			            <th>No. of Shares  &#9652;&#9662;</th>
-			            <th>Current Price per Share ($)  &#9652;&#9662;</th> 
-			            <th>Total Value ($)  &#9652;&#9662;</th> 
-			            <th>Initial Value ($)  &#9652;&#9662;</th>
-			            <th>Profit/Loss ($) &#9652;&#9662;</th>
+			            <th>Symbol  <span id="symbolAsc">&#9650;</span><span id="symbolDesc">&#9660;</span></th> 
+			            <th>No. of Shares  <span id="sharesAsc">&#9650;</span><span id="sharesDesc">&#9660;</span></th>
+			            <th>Current Price per Share ($)  <span id="ppsAsc">&#9650;</span><span id="ppsDesc">&#9660;</span></th> 
+			            <th>Total Value ($)  <span id="totalAsc">&#9650;</span><span id="totalDesc">&#9660;</span></th> 
+			            <th>Initial Value ($)  <span id="initialAsc">&#9650;</span><span id="initialDesc">&#9660;</span></th>
+			            <th>Profit/Loss ($) <span id="plAsc">&#9650;</span><span id="plDesc">&#9660;</span></th>
 			            <th>Sell</th>
 			          </tr>
 			        </thead>
