--- a/hw4/index.html
+++ b/hw4/index.html
@@ -9,15 +9,15 @@
     <title>Asteroids Near Earth</title>
   </head>
 
-  <body class="bg">
-
+  <body>
   	<div class="text-center">
-  		<div class="mb-5">
-	  		<h1 class="pt-5">Giant Asteroid for President 2020</h1>
-	  		<h2>Let's Just End It All</h2>
-	  		<h3>See below for a list of asteroids passing by Earth in the next seven days. On a given day, asteroids are sorted by the ones that NASA deem to be the most dangerous and then by those passing closest to the Earth. Note, also, the size of the asteroid, as those over 0.2 miles could cause severe damage if their path was diverted closer to Earth. These ones are highlighted, even if they are not passing close to the Earth.</h3>
+  		<div style="-webkit-text-stroke: 1px black; color: white;">
+        <h1>Asteroids Near Earth in the Next Week</h1>
+        <div class="pt-3">
+	  		 <h2>See below for a list of asteroids passing by Earth in the next seven days. On a given day, asteroids are sorted by the ones that NASA deem to be the most dangerous and then by those passing closest to the Earth. Note, also, the size of the asteroid, as those over 0.2 miles could cause catastrophic damage. These asteroids are highlighted, even if they are not passing close to the Earth and NASA does not deem them a threat, because a slight change in trajectory could doom the Earth! Might not be a bad thing to just start from scratch, though. That's why I'm asking for donations for Meteor 2020. Meteor can get it done!</h2>
 	  	</div>
 	</div>
+
 	<div id="asteroids">
 	</div>
 
